src/templates/masonry/css/masonry.css
/* Loading Styles */
.foogallery-masonry.foogallery-loading {
	min-height: 11px;
}

.foogallery-masonry.foogallery-loading > .foogallery-item {
	visibility: hidden;
}

/* Base styles */
.foogallery-masonry * {
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
}

.foogallery-masonry > .foogallery-item > .foogallery-thumb {
	display: block;
}

.foogallery-masonry.masonry-layout-fixed > .foogallery-item > .foogallery-thumb {
	display: inline-block;
}

.foogallery-masonry.masonry-layout-5col > .foogallery-item > .foogallery-thumb > img,
.foogallery-masonry.masonry-layout-4col > .foogallery-item > .foogallery-thumb > img,
.foogallery-masonry.masonry-layout-3col > .foogallery-item > .foogallery-thumb > img,
.foogallery-masonry.masonry-layout-2col > .foogallery-item > .foogallery-thumb > img {
	width: 100%;
	height: auto;
	max-width: 100%;
}

.foogallery-masonry .foogallery-item {
	line-height: 0;
	font-size: 0;
}

/* 2 column layouts */
/* 2 column layout - normal gutter */
.foogallery-masonry.masonry-layout-2col .foogallery-item { margin-bottom: 1%; width: 49%; }
.foogallery-masonry.masonry-layout-2col .masonry-item-width { width: 49%; }
.foogallery-masonry.masonry-layout-2col .masonry-gutter-width { width: 1%; }

/* 2 column layout - no gutter */
.foogallery-masonry.masonry-layout-2col.no-gutter .foogallery-item { margin-bottom: 0; width: 50%; }
.foogallery-masonry.masonry-layout-2col.no-gutter .masonry-item-width { width: 50%; }
.foogallery-masonry.masonry-layout-2col.no-gutter .masonry-gutter-width { width: 0; }

/* 2 column layout - large gutter */
.foogallery-masonry.masonry-layout-2col.large-gutter .foogallery-item { margin-bottom: 3%; width: 47%; }
.foogallery-masonry.masonry-layout-2col.large-gutter .masonry-item-width { width: 47%; }
.foogallery-masonry.masonry-layout-2col.large-gutter .masonry-gutter-width { width: 3%; }

/* 3 column layouts */
/* 3 column layout - normal gutter */
.foogallery-masonry.masonry-layout-3col .foogallery-item { margin-bottom: 1%; width: 32%; }
.foogallery-masonry.masonry-layout-3col .masonry-item-width { width: 32%; }
.foogallery-masonry.masonry-layout-3col .masonry-gutter-width { width: 1%; }

/* 3 column layout - no gutter */
.foogallery-masonry.masonry-layout-3col.no-gutter .foogallery-item { margin-bottom: 0; width: 33%; }
.foogallery-masonry.masonry-layout-3col.no-gutter .masonry-item-width { width: 33%; }
.foogallery-masonry.masonry-layout-3col.no-gutter .masonry-gutter-width { width: 0; }

/* 3 column layout - large gutter */
.foogallery-masonry.masonry-layout-3col.large-gutter .foogallery-item { margin-bottom: 3%; width: 30%; }
.foogallery-masonry.masonry-layout-3col.large-gutter .masonry-item-width { width: 30%; }
.foogallery-masonry.masonry-layout-3col.large-gutter .masonry-gutter-width { width: 3%; }

/* 4 column layouts */
/* 4 column layout - normal gutter */
.foogallery-masonry.masonry-layout-4col .foogallery-item { margin-bottom: 1%; width: 24%; }
.foogallery-masonry.masonry-layout-4col .masonry-item-width { width: 24%; }
.foogallery-masonry.masonry-layout-4col .masonry-gutter-width { width: 1%; }

/* 4 column layout - no gutter */
.foogallery-masonry.masonry-layout-4col.no-gutter .foogallery-item { margin-bottom: 0; width: 25%; }
.foogallery-masonry.masonry-layout-4col.no-gutter .masonry-item-width { width: 25%; }
.foogallery-masonry.masonry-layout-4col.no-gutter .masonry-gutter-width { width: 0; }

/* 4 column layout - large gutter */
.foogallery-masonry.masonry-layout-4col.large-gutter .foogallery-item { margin-bottom: 3%; width: 22%; }
.foogallery-masonry.masonry-layout-4col.large-gutter .masonry-item-width { width: 22%; }
.foogallery-masonry.masonry-layout-4col.large-gutter .masonry-gutter-width { width: 3%; }

/* 5 column layouts */
/* 5 column layout - normal gutter */
.foogallery-masonry.masonry-layout-5col .foogallery-item { margin-bottom: 1%; width: 19%; }
.foogallery-masonry.masonry-layout-5col .masonry-item-width { width: 19%; }
.foogallery-masonry.masonry-layout-5col .masonry-gutter-width { width: 1%; }

/* 5 column layout - no gutter */
.foogallery-masonry.masonry-layout-5col.no-gutter .foogallery-item { margin-bottom: 0; width: 20%; }
.foogallery-masonry.masonry-layout-5col.no-gutter .masonry-item-width { width: 20%; }
.foogallery-masonry.masonry-layout-5col.no-gutter .masonry-gutter-width { width: 0; }

/* 5 column layout - large gutter */
.foogallery-masonry.masonry-layout-5col.large-gutter .foogallery-item { margin-bottom: 3%; width: 17%; }
.foogallery-masonry.masonry-layout-5col.large-gutter .masonry-item-width { width: 17%; }
.foogallery-masonry.masonry-layout-5col.large-gutter .masonry-gutter-width { width: 3%; }

/* Force 2 column layout < 480px */
@media screen and (max-width: 480px) {
	.foogallery-masonry.masonry-layout-5col .masonry-item-width,
	.foogallery-masonry.masonry-layout-4col .masonry-item-width,
	.foogallery-masonry.masonry-layout-3col .masonry-item-width,
	.foogallery-masonry.masonry-layout-2col .masonry-item-width { width: 49%; }

	.foogallery-masonry.masonry-layout-5col .foogallery-item,
	.foogallery-masonry.masonry-layout-4col .foogallery-item,
	.foogallery-masonry.masonry-layout-3col .foogallery-item,
	.foogallery-masonry.masonry-layout-2col .foogallery-item { width: 49%; }

	.foogallery-masonry.masonry-layout-5col .masonry-gutter-width,
	.foogallery-masonry.masonry-layout-4col .masonry-gutter-width,
	.foogallery-masonry.masonry-layout-3col .masonry-gutter-width,
	.foogallery-masonry.masonry-layout-2col .masonry-gutter-width { width: 1%; }
}

/* Force 1 column layout < 320px */
@media screen and (max-width: 320px) {
	.foogallery-masonry.masonry-layout-5col .masonry-item-width,
	.foogallery-masonry.masonry-layout-4col .masonry-item-width,
	.foogallery-masonry.masonry-layout-3col .masonry-item-width,
	.foogallery-masonry.masonry-layout-2col .masonry-item-width { width: 100%; }

	.foogallery-masonry.masonry-layout-5col .foogallery-item,
	.foogallery-masonry.masonry-layout-4col .foogallery-item,
	.foogallery-masonry.masonry-layout-3col .foogallery-item,
	.foogallery-masonry.masonry-layout-2col .foogallery-item { width: 100%; margin-bottom: 2%; }

	.foogallery-masonry.masonry-layout-5col .masonry-gutter-width,
	.foogallery-masonry.masonry-layout-4col .masonry-gutter-width,
	.foogallery-masonry.masonry-layout-3col .masonry-gutter-width,
	.foogallery-masonry.masonry-layout-2col .masonry-gutter-width { width: 0; }
}

